--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
@@ -1,3 +1,10 @@
+import javafx.scene.*;
+import javafx.application.*;
+import javafx.scene.control.*;
+import java.io.*;
+import java.util.*;
+import javafx.event.*;
+
 <% if (!user) { %>
 	<h2>Welcome! Please log in.</h2>
 	<p><a href="auth/steam">Sign On with Steam</a></p>
