Most recent update. Adds some website functionality

--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
@@ -7,4 +7,5 @@
 
 <!-- Should redirect to homepage if you're not logged in -->
 <p><a href="account">See Account Information</a></p>
-
+<p><a href="/account/friends">Friends</a></p>
+<p><a href="/account/ListOfGames">GameList</a></p>
