--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
@@ -1,6 +1,6 @@
 <% if (!user) { %>
 	<h2>Welcome! Please log in.</h2>
-	<p><a href="auth/steam">Sign On with Steam</a></p>
+	<p><a href="auth/steam"><img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png"></a></p>
 <% } else { %>
 	<h2>Hello, <%= user.displayName %>. - <a href='logout'>Logout</a></h2>
 <% } %>
