--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
@@ -5,7 +5,7 @@
 	<h2>Hello, <%= user.displayName %>. - <a href='logout'>Logout</a></h2>
         <p><a href="account">See Account Information</a></p>
         <p><a href="/account/friends">Friends</a></p>
-        <p><a href="/account/ListOfGames">GameList</a></p>
+        <p><a href="/account/gamelist">ListOfGames</a></p>
 
 <% } %>
 
