More Graphic Buttons
Added more graphic buttons for Account info, friends, and GameList after user has logged in.

--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/index.ejs
@@ -3,9 +3,9 @@
 	<p><a href="auth/steam"><img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png"> </a></p>
 <% } else { %>
 	<h2>Hello, <%= user.displayName %>. - <a href='logout'>Logout</a></h2>
-        <p><a href="account">See Account Information</a></p>
-        <p><a href="/account/friends">Friends</a></p>
-        <p><a href="/account/gamelist">ListOfGames</a></p>
+        <p><a href="account"><img src ="https://images.cooltext.com/5133905.png"></a></p>
+        <p><a href="/account/friends"><img src="https://images.cooltext.com/5133908.png"></a></p>
+        <p><a href="/account/gamelist"><img src="https://images.cooltext.com/5133909.png"></a></p>
 
 <% } %>
 
