--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/friends.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/friends.ejs
@@ -1,3 +1,15 @@
-<p><img src='<%= user.photos[2].value %>' alt='Your Avatar Image' /></p>
-<p>ID: <%= user.id %></p>
-<p>Name: <%= user.displayName %></p>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Friend List</h2>
+
+<h2><a href="/account/back"> <--- Back</a></h2>
+
+
+<p><%= amigos %></p>
+
+
+
+</body>
+</html>
