Made the site prettier to look at

--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/account.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/account.ejs
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
+
+<center><h1>My Account</h1>
+<h2><a href="/account/back"> <--- Back</a></h2>
+
 <p><img src='<%= user.photos[2].value %>' alt='Your Avatar Image' /></p>
 <p>ID: <%= user.id %></p>
 <p>Name: <%= user.displayName %></p>
-<p>Info: <%= playerinfo %></p>
+<p>Info: <%= playerinfo %></p></center>
+
+</body>
+</html>
