--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/gamelist.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/gamelist.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:tomato;">
+<body style="background-color:lightblue;">
 
-<center><h1>My Friends</h1>
+<center><h1>My Games</h1>
 
 <h2><a href="/account/back"> <--- Back</a></h2>
 
 
-<p><b><%= amigos %></b></p>
+<p><b><%= games %></b></p>
+
 
 
 </center>
