--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/back.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/back.ejs
@@ -1,4 +1,15 @@
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
+
+	<center>
+
 <h2>Hello, <%= user.displayName %>. - <a href='logout'>Logout</a></h2>
         <p><a href="account"><img src ="https://images.cooltext.com/5133905.png"></a></p>
         <p><a href="friends"><img src="https://images.cooltext.com/5133908.png"></a></p>
         <p><a href="gamelist"><img src="https://images.cooltext.com/5133909.png"></a></p>
+
+    </center>
+
+</body>
+</html>
