--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/account.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/account.ejs
@@ -8,7 +8,7 @@
 <p><img src='<%= user.photos[2].value %>' alt='Your Avatar Image' /></p>
 <p>ID: <%= user.id %></p>
 <p>Name: <%= user.displayName %></p>
-<p>Info: <%= playerinfo %></p></center>
+<p>Player Level: <%= playerinfo %></p></center>
 
 </body>
 </html>
