--- a/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/gamelist.ejs
+++ b/Desktop/passport-steam-master/passport-steam-master/examples/signon/views/gamelist.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:lightblue;">
+<body style="background-color:lightgreen;">
 
 <center><h1>My Games</h1>
 
@@ -8,7 +8,6 @@
 
 
 <p><b><%= games %></b></p>
-
 
 
 </center>
